# OS_2k

./: CMakeLists.txt  README.md
Reports/Курсовой проект/: ReportKP.docx
Reports/Лабораторная 1/: ReportLW1.docx
Reports/Лабораторная 2/: ReportLW2.docx
Reports/Лабораторная 3/: ReportLW3.docx
Reports/Лабораторная 4/: ReportLW4.docx
Reports/Лабораторная 5 - 7/: ReportLW5.docx
Reports/Лабораторная 8/: ReportLW8.docx
kp/: CMakeLists.txt
kp/include/: client.h  server.h  shared.h
kp/src/: client.c  server.c
lab1/: CMakeLists.txt  ReportLW1.md  main.c
lab1/include/: parent.h  utils.h
lab1/src/: child_1.c  child_2.c  parent.c  utils.c
lab2/: CMakeLists.txt  ReportLW2.md  main.c
lab2/include/: monte_carlo_maps.h  utils.h
lab2/src/: monte_carlo_maps.c  utils.c
lab3/: CMakeLists.txt  main.c
lab3/include/: parent.h  utils.h
lab3/src/: child.c  parent.c  utils.c
lab4/: CMakeLists.txt
lab4/include/: lib1.h  lib2.h  utils.h
lab4/src/: lib1.c  lib2.c  program_1.c  program_2.c  utils.c
lab57/: main.c
lab57/include/: compute_node.h  control_node.h  message.h  pending_ops.h  tree.h
lab57/src/: compute_node.c  control_node.c  message.c  pending_ops.c  tree.c
lab8/: ReportLW8.md  log_lab1.txt  log_lab2.txt  log_lab3.txt  log_lab4.txt  log_lab57.txt
tests/: CMakeLists.txt  lab1_tests.cpp  lab4_test_lib1.cpp  lab4_test_lib2.cpp  lab57_message.cpp
